--- a/oriental.html
+++ b/oriental.html
@@ -191,8 +191,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">فوارغ محشية</div>
-			<div class="divrowr">105.000</div>
+			<div class="divrowl">دجاج بالكاري بالارز الابيض</div>
+			<div class="divrowr">112.000</div>
 			<br>
 			
 			
@@ -200,8 +200,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">عجة مع اللحمة المفرومة</div>
-			<div class="divrowr">85.000</div>
+			<div class="divrowl">ذربيان عدن بالدجاج </div>
+			<div class="divrowr">117.000</div>
 			<br>
 			
 			
@@ -210,8 +210,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">لوبية باللحمة مع اللبن</div>
-			<div class="divrowr">90.000</div>
+			<div class="divrowl">بطاطا باللحمة المفرومة والفطر والمكسرات</div>
+			<div class="divrowr">112.000</div>
 			<br>
 			
 			
@@ -219,20 +219,18 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">مقلوبة باذنجان مع لبن</div>
-			<div class="divrowr">79.000</div>
+			<div class="divrowl">منسف بالدجاج واللبن</div>
+			<div class="divrowr">107.000</div>
 			<br>
-			<div class="divrowl">بامية بزيت</div>
-			<div class="divrowr">65.000</div>
-			<br>
+			
 			
 			
 			
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">شيخ المحاشي باللبن</div>
-			<div class="divrowr">92.000</div>
+			<div class="divrowl">ارز بالخضار مع اللحمة المفرومة والمكسرات</div>
+			<div class="divrowr">101.000</div>
 			<br>
 			
 			
@@ -241,8 +239,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">كبة لبنية</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowl">شيش برك مع ارز بالعدس</div>
+			<div class="divrowr">103.000</div>
 			<br>
 			
 			
