--- a/oriental.html
+++ b/oriental.html
@@ -191,8 +191,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">دجاج بالكاري بالارز الابيض</div>
-			<div class="divrowr">112.000</div>
+			<div class="divrowl">لوبية باللحمة مع اللبن</div>
+			<div class="divrowr">98.000</div>
 			<br>
 			
 			
@@ -200,8 +200,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">ذربيان عدن بالدجاج </div>
-			<div class="divrowr">117.000</div>
+			<div class="divrowl">كبة بالصينية</div>
+			<div class="divrowr">98.000</div>
 			<br>
 			
 			
@@ -210,8 +210,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">بطاطا باللحمة المفرومة والفطر والمكسرات</div>
-			<div class="divrowr">112.000</div>
+			<div class="divrowl">مقلوبة باذنجان مع اللحمة والدجاج</div>
+			<div class="divrowr">102.000</div>
 			<br>
 			
 			
@@ -219,8 +219,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">منسف بالدجاج واللبن</div>
-			<div class="divrowr">107.000</div>
+			<div class="divrowl">شيخ المحاشي باللبن</div>
+			<div class="divrowr">117.000</div>
 			<br>
 			
 			
@@ -229,8 +229,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">ارز بالخضار مع اللحمة المفرومة والمكسرات</div>
-			<div class="divrowr">101.000</div>
+			<div class="divrowl">مصارين</div>
+			<div class="divrowr">128.000</div>
 			<br>
 			
 			
@@ -239,8 +239,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">شيش برك مع ارز بالعدس</div>
-			<div class="divrowr">103.000</div>
+			<div class="divrowl">ارز بالحمص مع الدجاج</div>
+			<div class="divrowr">100.000</div>
 			<br>
 			
 			
@@ -252,10 +252,10 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">سمكة حرة</div>
-			<div class="divrowr">108.000</div>
+			<div class="divrowr">157.000</div>
 			<br>
 			<div class="divrowl">ورق عنب باللحمة</div>
-			<div class="divrowr">155.000</div>
+			<div class="divrowr">165.000</div>
 			<br>
 			<div class="divrowl">مغربية</div>
 			<div class="divrowr">54.000</div>
@@ -264,37 +264,46 @@
 			<div class="divrowr">64.000</div>
 			<br>
 			<div class="divrowl">سبانخ و رز</div>
-			<div class="divrowr">109.000</div>
+			<div class="divrowr">114.000</div>
 			<br>
 			<div class="divrowl">كوسا بدبس الرمان</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowr">92.000</div>
 			<br>
 			<div class="divrowl">سلق بلوبية</div>
-			<div class="divrowr">83.000</div>
+			<div class="divrowr">86.000</div>
 			<br>
 			<div class="divrowl">بطاطا علحمة مفرومة مع الفطر والمكسرات</div>
 			<div class="divrowr">98.000</div>
 			<br>
 			<div class="divrowl">مغربية بالدجاج</div>
-			<div class="divrowr">95.000</div>
+			<div class="divrowr">98.000</div>
 			<br>
 			<div class="divrowl">ملفوف بدبس الرمان</div>
-			<div class="divrowr">104.000</div>
+			<div class="divrowr">112.000</div>
 			<br>
 			<div class="divrowl">ورق عنب بالزيت</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowr">98.000</div>
 			<br>
 			<div class="divrowl">دجاج بالصينية</div>
-			<div class="divrowr">113.000</div>
+			<div class="divrowr">121.000</div>
 			<br>
 			<div class="divrowl">هندبة بالثوم والحامض</div>
-			<div class="divrowr">80.000</div>
+			<div class="divrowr">87.000</div>
 			<br>
 			<div class="divrowl">هندبة بالبصل</div>
-			<div class="divrowr">80.000</div>
+			<div class="divrowr">86.000</div>
 			<br>
-			<div class="divrowl">أقراص كبة</div>
-			<div class="divrowr">20.000</div>
+			<div class="divrowl">قرص كبة</div>
+			<div class="divrowr">18000.000</div>
+			<br>
+			<div class="divrowl">مقالي مشكل</div>
+			<div class="divrowr">87.000</div>
+			<br>
+			<div class="divrowl">سلق ملفوف</div>
+			<div class="divrowr">112.000</div>
+			<br>
+			<div class="divrowl">عجة</div>
+			<div class="divrowr">83.000</div>
 		</div>
 
 
