--- a/oxidental.html
+++ b/oxidental.html
@@ -112,8 +112,8 @@
 	
 		<div class="accordion__content">
 	
-			<div class="divrowl">Crispy</div>
-			<div class="divrowr">120.000</div>
+			<div class="divrowl">Crispy (OFFER)</div>
+			<div class="divrowr">105.000</div>
 			<br>
 			<div class="divrowl">Nuggets</div>
 			<div class="divrowr">89.000</div>
