--- a/oriental.html
+++ b/oriental.html
@@ -191,8 +191,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">لوبية باللحمة مع اللبن</div>
-			<div class="divrowr">98.000</div>
+			<div class="divrowl">بفتاك مع بطاطا</div>
+			<div class="divrowr">144.000</div>
 			<br>
 			
 			
@@ -200,7 +200,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">كبة بالصينية</div>
+			<div class="divrowl">قمحية بالدجاج</div>
 			<div class="divrowr">98.000</div>
 			<br>
 			
@@ -210,8 +210,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">مقلوبة باذنجان مع اللحمة والدجاج</div>
-			<div class="divrowr">102.000</div>
+			<div class="divrowl">دجاج بالكاري بالارز الابيض</div>
+			<div class="divrowr">113.000</div>
 			<br>
 			
 			
@@ -219,8 +219,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">شيخ المحاشي باللبن</div>
-			<div class="divrowr">117.000</div>
+			<div class="divrowl">داوود باشا </div>
+			<div class="divrowr">131.000</div>
 			<br>
 			
 			
@@ -229,8 +229,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">مصارين</div>
-			<div class="divrowr">128.000</div>
+			<div class="divrowl">برغل بحمص بالدجاج</div>
+			<div class="divrowr">103.000</div>
 			<br>
 			
 			
@@ -239,8 +239,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">ارز بالحمص مع الدجاج</div>
-			<div class="divrowr">100.000</div>
+			<div class="divrowl">مصارين</div>
+			<div class="divrowr">128.000</div>
 			<br>
 			
 			
