--- a/oriental.html
+++ b/oriental.html
@@ -126,34 +126,34 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">فول بالطحينة</div>
-			<div class="divrowr">36.000</div>
+			<div class="divrowr">38.000</div>
 			<br>
 			<div class="divrowl">ماليزية</div>
-			<div class="divrowr">74.000</div>
+			<div class="divrowr">70.000</div>
 			<br>
 			<div class="divrowl">فتة مع المكسرات</div>
-			<div class="divrowr">69.000</div>
+			<div class="divrowr">70.000</div>
 			<br>
 			<div class="divrowl">حمص حب</div>
-			<div class="divrowr">36.000</div>
+			<div class="divrowr">38.000</div>
 			<br>
 			<div class="divrowl">فول بحامض</div>
-			<div class="divrowr">36.000</div>
+			<div class="divrowr">38.000</div>
 			<br>
 			<div class="divrowl">حمص ناعم مع اللحمة المفرومة</div>
-			<div class="divrowr">98.000</div>
+			<div class="divrowr">95.000</div>
 			<br>
 			<div class="divrowl">حمص ناعم</div>
-			<div class="divrowr">36.000</div>
+			<div class="divrowr">38.000</div>
 			<br>
 			<div class="divrowl">حمص ناعم نصف كيلو</div>
 			<div class="divrowr">44.000</div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص صغير</div>
-			<div class="divrowr">15.500</div>
+			<div class="divrowr">13.500</div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص كبير</div>
-			<div class="divrowr">31.500</div>
+			<div class="divrowr">28.000</div>
 			<br>
 		</div>
 
@@ -162,25 +162,25 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">دزينة معجنات زعتر</div>
-			<div class="divrowr">116.000</div>
+			<div class="divrowr">106.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات قريشة</div>
-			<div class="divrowr">162.000</div>
+			<div class="divrowr">148.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات سلق</div>
-			<div class="divrowr">166.000</div>
+			<div class="divrowr">150.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات جبنة</div>
-			<div class="divrowr">156.000</div>
+			<div class="divrowr">140.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات محمرة</div>
-			<div class="divrowr">132.000</div>
+			<div class="divrowr">120.000</div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص كبير</div>
-			<div class="divrowr">31.500</div>
+			<div class="divrowr">28.000</div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص صغير</div>
-			<div class="divrowr">15.500</div>
+			<div class="divrowr">13.500</div>
 			<br>
 			
 			
@@ -200,8 +200,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">قمحية بالدجاج</div>
-			<div class="divrowr">98.000</div>
+			<div class="divrowl">ملوخية مع الأرز</div>
+			<div class="divrowr">89.000</div>
 			<br>
 			
 			
@@ -210,8 +210,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">دجاج بالكاري بالارز الابيض</div>
-			<div class="divrowr">113.000</div>
+			<div class="divrowl">بطاطا باللحمة المفرومة والفطر والمكسرات</div>
+			<div class="divrowr">118.000</div>
 			<br>
 			
 			
@@ -219,8 +219,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">داوود باشا </div>
-			<div class="divrowr">131.000</div>
+			<div class="divrowl">دجاج بالكاري بالارز الابيض</div>
+			<div class="divrowr">112.000</div>
 			<br>
 			
 			
@@ -229,8 +229,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">برغل بحمص بالدجاج</div>
-			<div class="divrowr">103.000</div>
+			<div class="divrowl">ذربيان عدن بالدجاج </div>
+			<div class="divrowr">113.000</div>
 			<br>
 			
 			
@@ -239,8 +239,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">مصارين</div>
-			<div class="divrowr">128.000</div>
+			<div class="divrowl">بفتاك مع بطاطا</div>
+			<div class="divrowr">155.000</div>
 			<br>
 			
 			
@@ -252,58 +252,58 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">سمكة حرة</div>
-			<div class="divrowr">159.000</div>
+			<div class="divrowr">143.000</div>
 			<br>
 			<div class="divrowl">ورق عنب باللحمة</div>
-			<div class="divrowr">162.000</div>
+			<div class="divrowr">146.000</div>
 			<br>
 			<div class="divrowl">مغربية</div>
-			<div class="divrowr">83.000</div>
+			<div class="divrowr">75.000</div>
 			<br>
 			<div class="divrowl">عجة</div>
-			<div class="divrowr">84.000</div>
+			<div class="divrowr">76.000</div>
 			<br>
 			<div class="divrowl">سبانخ و رز</div>
-			<div class="divrowr">98.000</div>
+			<div class="divrowr">89.000</div>
 			<br>
 			<div class="divrowl">كوسا بدبس الرمان</div>
-			<div class="divrowr">78.000</div>
+			<div class="divrowr">70.000</div>
 			<br>
 			<div class="divrowl">سلق بلوبية</div>
-			<div class="divrowr">75.000</div>
+			<div class="divrowr">68.000</div>
 			<br>
 			<div class="divrowl">بطاطا علحمة مفرومة مع الفطر والمكسرات</div>
 			<div class="divrowr">118.000</div>
 			<br>
 			<div class="divrowl">مغربية بالدجاج</div>
-			<div class="divrowr">99.000</div>
+			<div class="divrowr">90.000</div>
 			<br>
 			<div class="divrowl">ملفوف بدبس الرمان</div>
-			<div class="divrowr">94.000</div>
+			<div class="divrowr">85.000</div>
 			<br>
 			<div class="divrowl">ورق عنب بالزيت</div>
-			<div class="divrowr">82.000</div>
+			<div class="divrowr">85.000</div>
 			<br>
 			<div class="divrowl">دجاج بالصينية</div>
 			<div class="divrowr">122.000</div>
 			<br>
 			<div class="divrowl">هندبة بالثوم والحامض</div>
-			<div class="divrowr">72.000</div>
+			<div class="divrowr">75.000</div>
 			<br>
 			<div class="divrowl">هندبة بالبصل</div>
-			<div class="divrowr">72.000</div>
+			<div class="divrowr">75.000</div>
 			<br>
 			<div class="divrowl">قرص كبة</div>
-			<div class="divrowr">14.000</div>
+			<div class="divrowr">15.000</div>
 			<br>
 			<div class="divrowl">مقالي مشكل</div>
-			<div class="divrowr">78.000</div>
+			<div class="divrowr">70.000</div>
 			<br>
 			<div class="divrowl">سلق ملفوف</div>
-			<div class="divrowr">98.000</div>
+			<div class="divrowr">89.000</div>
 			<br>
-			<div class="divrowl">عجة</div>
-			<div class="divrowr">84.000</div>
+			<div class="divrowl">عجة باللحمة</div>
+			<div class="divrowr">103.000</div>
 		</div>
 
 
