--- a/oxidental.html
+++ b/oxidental.html
@@ -77,31 +77,31 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">Meat Burger 150g</div>
-			<div class="divrowr">120.000</div>
+			<div class="divrowr">115.000</div>
 			<br>
 			<div class="divrowl">Meat Burger 200g</div>
-			<div class="divrowr">167.000</div>
+			<div class="divrowr">152.000</div>
 			<br>
 			<div class="divrowl">Double Meat Burger</div>
-			<div class="divrowr">220.000</div>
+			<div class="divrowr">195.000</div>
 			<br>
 			<div class="divrowl">Swiss Mushroom Burger</div>
-			<div class="divrowr">202.000</div>
+			<div class="divrowr">199.000</div>
 			<br>
 			<div class="divrowl">Double Swiss Mushroom Burger</div>
-			<div class="divrowr">250.000</div>
+			<div class="divrowr">230.000</div>
 			<br>
 			<div class="divrowl">Chicken Burger</div>
-			<div class="divrowr">125.000</div>
+			<div class="divrowr">112.000</div>
 			<br>
 			<div class="divrowl">Double Chicken Burger</div>
-			<div class="divrowr">156.000</div>
+			<div class="divrowr">148.000</div>
 			<br>
 			<div class="divrowl">Swiss Mushroom Chicken Burger</div>
-			<div class="divrowr">155.000</div>
+			<div class="divrowr">145.000</div>
 			<br>
 			<div class="divrowl">Double Swiss Mushroom Chicken Burger</div>
-			<div class="divrowr">215.000</div>
+			<div class="divrowr">200.000</div>
 			<br>
 			<div class="divrowl">Chicken Breast Burger</div>
 			<div class="divrowr">145.000</div>
@@ -112,26 +112,26 @@
 	
 		<div class="accordion__content">
 	
-			<div class="divrowl">Crispy (OFFER)</div>
-			<div class="divrowr">105.000</div>
+			<div class="divrowl">Crispy</div>
+			<div class="divrowr">140.000</div>
 			<br>
 			<div class="divrowl">Nuggets</div>
 			<div class="divrowr">93.000</div>
 			<br>
 			<div class="divrowl">Chicken Popcorn</div>
-			<div class="divrowr">101.000</div>
+			<div class="divrowr">100.000</div>
 			<br>
 			<div class="divrowl">Chicken Escalope</div>
-			<div class="divrowr">123.000</div>
+			<div class="divrowr">115.000</div>
 			<br>
 			<div class="divrowl">Cordon Bleu</div>
-			<div class="divrowr">160.000</div>
+			<div class="divrowr">150.000</div>
 			<br>
 			<div class="divrowl">Chicken Pesto</div>
 			<div class="divrowr">140.000</div>
 			<br>
 			<div class="divrowl">Grilled Steak</div>
-			<div class="divrowr">222.000</div>
+			<div class="divrowr">215.000</div>
 			<br>
 			<div class="divrowl">Mushroom Meat Steak</div>
 			<div class="divrowr">261.000</div>
@@ -143,10 +143,10 @@
 			<div class="divrowr">126.000</div>
 			<br>
 			<div class="divrowl">Rosemary Chicken Breast</div>
-			<div class="divrowr">142.000</div>
+			<div class="divrowr">145.000</div>
 			<br>
 			<div class="divrowl">Sauted Vegetables</div>
-			<div class="divrowr">149.000</div>
+			<div class="divrowr">135.000</div>
 			<br>
 		</div>
 
@@ -158,59 +158,59 @@
 			<div class="divrowr">85.000</div>
 			<br>
 			<div class="divrowl">Fajita</div>
-			<div class="divrowr">100.000</div>
+			<div class="divrowr">85.000</div>
 			<br>
 			<div class="divrowl">Philadelphia</div>
-			<div class="divrowr">146.000</div>
+			<div class="divrowr">138.000</div>
 			<br>
 			<div class="divrowl">Tacos Meat</div>
-			<div class="divrowr">215.000</div>
+			<div class="divrowr">205.000</div>
 			<br>
 			<div class="divrowl">Tacos Chicken</div>
 			<div class="divrowr">141.000</div>
 			<br>
 			<div class="divrowl">Meat Quesadilla</div>
-			<div class="divrowr">187.000</div>
+			<div class="divrowr">168.000</div>
 			<br>
 			<div class="divrowl">Chicken Quesadilla</div>
-			<div class="divrowr">135.000</div>
+			<div class="divrowr">125.000</div>
 			<br>
 			<div class="divrowl">Vegetables Quesadilla</div>
-			<div class="divrowr">112.000</div>
+			<div class="divrowr">101.000</div>
 		</div>
 <div class="accordion__button">Pasta</div>
 	
 		<div class="accordion__content">
 	
 			<div class="divrowl">Broccoli</div>
-			<div class="divrowr">140.000</div>
+			<div class="divrowr">145.000</div>
 			<br>
 			<div class="divrowl">Penne Arrabbiata</div>
 			<div class="divrowr">105.000</div>
 			<br>
 			<div class="divrowl">Pink Sauce</div>
-			<div class="divrowr">100.000</div>
+			<div class="divrowr">90.000</div>
 			<br>
 			<div class="divrowl">Pesto</div>
 			<div class="divrowr">120.000</div>
 			<br>
 			<div class="divrowl">Bolognese</div>
-			<div class="divrowr">114.000</div>
+			<div class="divrowr">120.000</div>
 			<br>
 			<div class="divrowl">Primavera</div>
-			<div class="divrowr">114.000</div>
+			<div class="divrowr">118.000</div>
 			<br>
 			<div class="divrowl">Lasagne Bolognese</div>
 			<div class="divrowr">208.000</div>
 			<br>
 			<div class="divrowl">Fettuccine Alfredo</div>
-			<div class="divrowr">119.000</div>
+			<div class="divrowr">109.000</div>
 			<br>
 			<div class="divrowl">Four Cheese</div>
-			<div class="divrowr">250.000</div>
+			<div class="divrowr">240.000</div>
 			<br>
 			<div class="divrowl">Pasta Salad</div>
-			<div class="divrowr">104.000</div>
+			<div class="divrowr">94.000</div>
 			<br>
 			<div class="divrowl">Penne Pasta Salad</div>
 			<div class="divrowr">105.000</div>
@@ -238,7 +238,7 @@
 			<div class="divrowr">96.000</div>
 			<br>
 			<div class="divrowl">Pasta Salad</div>
-			<div class="divrowr">104.000</div>
+			<div class="divrowr">94.000</div>
 			<br>
 			<div class="divrowl">Penne Pasta Salad</div>
 			<div class="divrowr">105.000</div>
