--- a/oriental.html
+++ b/oriental.html
@@ -191,8 +191,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">بفتاك مع بطاطا</div>
-			<div class="divrowr">144.000</div>
+			<div class="divrowl">ارز بالخضار مع اللحمة المفرومة والمكسرات</div>
+			<div class="divrowr">107.000</div>
 			<br>
 			
 			
@@ -200,8 +200,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">ملوخية مع الأرز</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowl">شيش برك مع ارز بالعدس</div>
+			<div class="divrowr">109.000</div>
 			<br>
 			
 			
@@ -210,8 +210,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">بطاطا باللحمة المفرومة والفطر والمكسرات</div>
-			<div class="divrowr">118.000</div>
+			<div class="divrowl">برغل بحمص بالدجاج مع لبن</div>
+			<div class="divrowr">99.000</div>
 			<br>
 			
 			
@@ -219,8 +219,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">دجاج بالكاري بالارز الابيض</div>
-			<div class="divrowr">112.000</div>
+			<div class="divrowl">مصارين</div>
+			<div class="divrowr">148.000</div>
 			<br>
 			
 			
@@ -229,8 +229,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">ذربيان عدن بالدجاج </div>
-			<div class="divrowr">113.000</div>
+			<div class="divrowl">عجة  بالصينية</div>
+			<div class="divrowr">76.000</div>
 			<br>
 			
 			
@@ -239,8 +239,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">بفتاك مع بطاطا</div>
-			<div class="divrowr">155.000</div>
+			<div class="divrowl">شاكرية باللبن</div>
+			<div class="divrowr">98.000</div>
 			<br>
 			
 			
