--- a/oriental.html
+++ b/oriental.html
@@ -125,30 +125,6 @@
 	
 		<div class="accordion__content">
 	
-			<div class="divrowl">فول بالطحينة</div>
-			<div class="divrowr">40.000</div>
-			<br>
-			<div class="divrowl">ماليزية</div>
-			<div class="divrowr">74.000</div>
-			<br>
-			<div class="divrowl">فتة مع المكسرات</div>
-			<div class="divrowr">74.000</div>
-			<br>
-			<div class="divrowl">حمص حب</div>
-			<div class="divrowr">40.000</div>
-			<br>
-			<div class="divrowl">فول بحامض</div>
-			<div class="divrowr">40.000</div>
-			<br>
-			<div class="divrowl">حمص ناعم مع اللحمة المفرومة</div>
-			<div class="divrowr">101.000</div>
-			<br>
-			<div class="divrowl">حمص ناعم</div>
-			<div class="divrowr">40.000</div>
-			<br>
-			<div class="divrowl">حمص ناعم نصف كيلو</div>
-			<div class="divrowr">47.000</div>
-			<br>
 			<div class="divrowl">لحمة بعجين قرص صغير</div>
 			<div class="divrowr">14.000</div>
 			<br>
@@ -191,8 +167,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">ارز بالخضار مع اللحمة المفرومة والمكسرات</div>
-			<div class="divrowr">107.000</div>
+			<div class="divrowl">ارنبيط وبطاطا بالطحينية</div>
+			<div class="divrowr">79.000</div>
 			<br>
 			
 			
@@ -200,8 +176,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">شيش برك مع ارز بالعدس</div>
-			<div class="divrowr">109.000</div>
+			<div class="divrowl">ارز بالحمص مع الدجاج</div>
+			<div class="divrowr">98.000</div>
 			<br>
 			
 			
@@ -210,7 +186,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">برغل بحمص بالدجاج مع لبن</div>
+			<div class="divrowl"> دجاج صيني </div>
 			<div class="divrowr">99.000</div>
 			<br>
 			
@@ -219,8 +195,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">مصارين</div>
-			<div class="divrowr">135.000</div>
+			<div class="divrowl">بفتاك مع بطاطا</div>
+			<div class="divrowr">155.000</div>
 			<br>
 			
 			
@@ -229,8 +205,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">عجة  بالصينية</div>
-			<div class="divrowr">76.000</div>
+			<div class="divrowl">قمحية بالدجاج</div>
+			<div class="divrowr">94.000</div>
 			<br>
 			
 			
@@ -239,8 +215,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">شاكرية باللبن</div>
-			<div class="divrowr">98.000</div>
+			<div class="divrowl">سودة بزيت وثوم وحامض مع بطاطا</div>
+			<div class="divrowr">97.000</div>
 			<br>
 			
 			
