--- a/oriental.html
+++ b/oriental.html
@@ -176,8 +176,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">ارز بالحمص مع الدجاج</div>
-			<div class="divrowr">98.000</div>
+			<div class="divrowl">عجة باللحمة واللبن</div>
+			<div class="divrowr">103.000</div>
 			<br>
 			
 			
@@ -186,8 +186,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl"> دجاج صيني </div>
-			<div class="divrowr">99.000</div>
+			<div class="divrowl">مصارين</div>
+			<div class="divrowr">148.000</div>
 			<br>
 			
 			
@@ -195,8 +195,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">بفتاك مع بطاطا</div>
-			<div class="divrowr">155.000</div>
+			<div class="divrowl">كفتة بالصينية مع الارز </div>
+			<div class="divrowr">104.000</div>
 			<br>
 			
 			
@@ -205,8 +205,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">قمحية بالدجاج</div>
-			<div class="divrowr">94.000</div>
+			<div class="divrowl">بطاطا باللحمة المفرومة والفطر والمكسرات</div>
+			<div class="divrowr">118.000</div>
 			<br>
 			
 			
@@ -215,8 +215,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">سودة بزيت وثوم وحامض مع بطاطا</div>
-			<div class="divrowr">97.000</div>
+			<div class="divrowl">دجاج بالكاري بالارز الابيض</div>
+			<div class="divrowr">112.000</div>
 			<br>
 			
 			
