--- a/oriental.html
+++ b/oriental.html
@@ -176,8 +176,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">عجة باللحمة واللبن</div>
-			<div class="divrowr">103.000</div>
+			<div class="divrowl">ذربيان عدن بالدجاج</div>
+			<div class="divrowr">113.000</div>
 			<br>
 			
 			
@@ -186,8 +186,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">مصارين</div>
-			<div class="divrowr">148.000</div>
+			<div class="divrowl">ارز بالخضار مع اللحمة المفرومة والمكسرات</div>
+			<div class="divrowr">107.000</div>
 			<br>
 			
 			
@@ -195,8 +195,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">كفتة بالصينية مع الارز </div>
-			<div class="divrowr">104.000</div>
+			<div class="divrowl">شيش برك مع ارز بالعدس</div>
+			<div class="divrowr">109.000</div>
 			<br>
 			
 			
@@ -205,8 +205,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">بطاطا باللحمة المفرومة والفطر والمكسرات</div>
-			<div class="divrowr">118.000</div>
+			<div class="divrowl">برغل بحمص بالدجاج مع لبن</div>
+			<div class="divrowr">99.000</div>
 			<br>
 			
 			
@@ -215,8 +215,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">دجاج بالكاري بالارز الابيض</div>
-			<div class="divrowr">112.000</div>
+			<div class="divrowl">مصارين</div>
+			<div class="divrowr">135.000</div>
 			<br>
 			
 			
