--- a/oriental.html
+++ b/oriental.html
@@ -167,8 +167,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">ارنبيط وبطاطا بالطحينية</div>
-			<div class="divrowr">79.000</div>
+			<div class="divrowl">شاكرية باللبن</div>
+			<div class="divrowr">98.000</div>
 			<br>
 			
 			
@@ -176,8 +176,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">ذربيان عدن بالدجاج</div>
-			<div class="divrowr">113.000</div>
+			<div class="divrowl">عجة  بالصينية</div>
+			<div class="divrowr">76.000</div>
 			<br>
 			
 			
@@ -186,8 +186,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">ارز بالخضار مع اللحمة المفرومة والمكسرات</div>
-			<div class="divrowr">107.000</div>
+			<div class="divrowl">كبة لبنية </div>
+			<div class="divrowr">96.000</div>
 			<br>
 			
 			
@@ -195,8 +195,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">شيش برك مع ارز بالعدس</div>
-			<div class="divrowr">109.000</div>
+			<div class="divrowl">دجاج بالصينية مع بطاطا</div>
+			<div class="divrowr">122.000</div>
 			<br>
 			
 			
@@ -205,8 +205,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">برغل بحمص بالدجاج مع لبن</div>
-			<div class="divrowr">99.000</div>
+			<div class="divrowl">بازيلا وارز</div>
+			<div class="divrowr">109.000</div>
 			<br>
 			
 			
@@ -215,8 +215,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">مصارين</div>
-			<div class="divrowr">135.000</div>
+			<div class="divrowl"></div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
