--- a/oriental.html
+++ b/oriental.html
@@ -186,8 +186,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">كبة لبنية </div>
-			<div class="divrowr">96.000</div>
+			<div class="divrowl">مصارين</div>
+			<div class="divrowr">135.000</div>
 			<br>
 			
 			
@@ -195,8 +195,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">دجاج بالصينية مع بطاطا</div>
-			<div class="divrowr">122.000</div>
+			<div class="divrowl">ارز بالحمص مع الدجاج</div>
+			<div class="divrowr">98.000</div>
 			<br>
 			
 			
@@ -205,8 +205,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">بازيلا وارز</div>
-			<div class="divrowr">109.000</div>
+			<div class="divrowl"> دجاج صيني</div>
+			<div class="divrowr">99.000</div>
 			<br>
 			
 			
@@ -215,8 +215,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl"></div>
-			<div class="divrowr"></div>
+			<div class="divrowl">بفتاك مع بطاطا</div>
+			<div class="divrowr">155.000</div>
 			<br>
 			
 			
