--- a/oriental.html
+++ b/oriental.html
@@ -126,10 +126,10 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">لحمة بعجين قرص صغير</div>
-			<div class="divrowr">14.000</div>
+			<div class="divrowr">17.000</div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص كبير</div>
-			<div class="divrowr">30.000</div>
+			<div class="divrowr">36.000</div>
 			<br>
 		</div>
 
@@ -138,25 +138,25 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">دزينة معجنات زعتر</div>
-			<div class="divrowr">112.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">دزينة معجنات قريشة</div>
-			<div class="divrowr">156.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">دزينة معجنات سلق</div>
-			<div class="divrowr">160.000</div>
+			<div class="divrowr">192.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات جبنة</div>
-			<div class="divrowr">150.000</div>
+			<div class="divrowr">220.000</div>
 			<br>
 			<div class="divrowl">دزينة معجنات محمرة</div>
-			<div class="divrowr">128.000</div>
+			<div class="divrowr">154.000</div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص كبير</div>
-			<div class="divrowr">30.000</div>
+			<div class="divrowr">36.000</div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص صغير</div>
-			<div class="divrowr">15.500</div>
+			<div class="divrowr">17.500</div>
 			<br>
 			
 			
@@ -167,8 +167,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">سودة بزيت وثوم وحامض مع بطاطا</div>
-			<div class="divrowr">97.000</div>
+			<div class="divrowl">دجاج بالصينية</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -176,8 +176,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">قمحية بالدجاج</div>
-			<div class="divrowr">94.000</div>
+			<div class="divrowl">دجاج بالكاري بالارز الابيض</div>
+			<div class="divrowr">154.000</div>
 			<br>
 			
 			
@@ -186,8 +186,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">برغل بحمص بالدجاج</div>
-			<div class="divrowr">99.000</div>
+			<div class="divrowl">فاصولياء بالارز </div>
+			<div class="divrowr">118.000</div>
 			<br>
 			
 			
@@ -195,8 +195,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">كفتة بالصينية مع ارز</div>
-			<div class="divrowr">104.000</div>
+			<div class="divrowl">بفتاك مع بطاطا</div>
+			<div class="divrowr">168.000</div>
 			<br>
 			
 			
@@ -205,8 +205,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl"> مصارين</div>
-			<div class="divrowr">135.000</div>
+			<div class="divrowl">عجة بالصينية</div>
+			<div class="divrowr">97.000</div>
 			<br>
 			
 			
@@ -215,8 +215,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">فاصولياء بالارز</div>
-			<div class="divrowr">102.000</div>
+			<div class="divrowl">ارز بالخضار مع اللحمة المفرومة والمكسرات</div>
+			<div class="divrowr">137.000</div>
 			<br>
 			
 			
@@ -228,58 +228,58 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">سمكة حرة</div>
-			<div class="divrowr">143.000</div>
+			<div class="divrowr">183.000</div>
 			<br>
 			<div class="divrowl">ورق عنب باللحمة</div>
-			<div class="divrowr">146.000</div>
-			<br>
-			<div class="divrowl">مغربية</div>
-			<div class="divrowr">75.000</div>
-			<br>
-			<div class="divrowl">عجة</div>
-			<div class="divrowr">76.000</div>
-			<br>
-			<div class="divrowl">سبانخ و رز</div>
-			<div class="divrowr">89.000</div>
-			<br>
-			<div class="divrowl">كوسا بدبس الرمان</div>
-			<div class="divrowr">70.000</div>
-			<br>
-			<div class="divrowl">سلق بلوبية</div>
-			<div class="divrowr">68.000</div>
-			<br>
-			<div class="divrowl">بطاطا علحمة مفرومة مع الفطر والمكسرات</div>
-			<div class="divrowr">118.000</div>
+			<div class="divrowr">245.000</div>
 			<br>
 			<div class="divrowl">مغربية بالدجاج</div>
-			<div class="divrowr">90.000</div>
-			<br>
-			<div class="divrowl">ملفوف بدبس الرمان</div>
-			<div class="divrowr">85.000</div>
-			<br>
-			<div class="divrowl">ورق عنب بالزيت</div>
-			<div class="divrowr">85.000</div>
-			<br>
-			<div class="divrowl">دجاج بالصينية</div>
-			<div class="divrowr">122.000</div>
-			<br>
-			<div class="divrowl">هندبة بالثوم والحامض</div>
-			<div class="divrowr">75.000</div>
-			<br>
-			<div class="divrowl">هندبة بالبصل</div>
-			<div class="divrowr">75.000</div>
-			<br>
-			<div class="divrowl">قرص كبة</div>
-			<div class="divrowr">15.000</div>
-			<br>
-			<div class="divrowl">مقالي مشكل</div>
-			<div class="divrowr">70.000</div>
-			<br>
-			<div class="divrowl">سلق ملفوف</div>
-			<div class="divrowr">89.000</div>
+			<div class="divrowr">115.000</div>
 			<br>
 			<div class="divrowl">عجة باللحمة</div>
-			<div class="divrowr">103.000</div>
+			<div class="divrowr">132.000</div>
+			<br>
+			<div class="divrowl">سبانخ و رز</div>
+			<div class="divrowr">113.000</div>
+			<br>
+			<div class="divrowl">كوسا بدبس الرمان</div>
+			<div class="divrowr">90.000</div>
+			<br>
+			<div class="divrowl">سلق بلوبية</div>
+			<div class="divrowr">86.000</div>
+			<br>
+			<div class="divrowl">بطاطا علحمة مفرومة مع الفطر والمكسرات</div>
+			<div class="divrowr">151.000</div>
+			<br>
+			<div class="divrowl">مغربية</div>
+			<div class="divrowr"></div>
+			<br>
+			<div class="divrowl">ملفوف بدبس الرمان</div>
+			<div class="divrowr">108.000</div>
+			<br>
+			<div class="divrowl">ورق عنب بالزيت</div>
+			<div class="divrowr">108.000</div>
+			<br>
+			<div class="divrowl">دجاج بالصينية</div>
+			<div class="divrowr">156.000</div>
+			<br>
+			<div class="divrowl">هندبة بالثوم والحامض</div>
+			<div class="divrowr">96.000</div>
+			<br>
+			<div class="divrowl">هندبة بالبصل</div>
+			<div class="divrowr">83.000</div>
+			<br>
+			<div class="divrowl">قرص كبة</div>
+			<div class="divrowr">25.000</div>
+			<br>
+			<div class="divrowl">مقالي مشكل</div>
+			<div class="divrowr"></div>
+			<br>
+			<div class="divrowl">سلق ملفوف</div>
+			<div class="divrowr">113.000</div>
+			<br>
+			<div class="divrowl">عجة</div>
+			<div class="divrowr"></div>
 		</div>
 
 
