--- a/oriental.html
+++ b/oriental.html
@@ -176,8 +176,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">دجاج بالكاري بالارز الابيض</div>
-			<div class="divrowr">154.000</div>
+			<div class="divrowl">كفتة بالطحينية بالفرن</div>
+			<div class="divrowr">150.000</div>
 			<br>
 			
 			
@@ -186,8 +186,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">فاصولياء بالارز </div>
-			<div class="divrowr">118.000</div>
+			<div class="divrowl">مصارين</div>
+			<div class="divrowr">162.000</div>
 			<br>
 			
 			
@@ -195,8 +195,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">بفتاك مع بطاطا</div>
-			<div class="divrowr">168.000</div>
+			<div class="divrowl">برغل بحمص بالدجاج مع لبن</div>
+			<div class="divrowr">127.000</div>
 			<br>
 			
 			
@@ -205,8 +205,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">عجة بالصينية</div>
-			<div class="divrowr">97.000</div>
+			<div class="divrowl">شاكرية باللبن</div>
+			<div class="divrowr">114.000</div>
 			<br>
 			
 			
@@ -215,8 +215,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">ارز بالخضار مع اللحمة المفرومة والمكسرات</div>
-			<div class="divrowr">137.000</div>
+			<div class="divrowl">عجة  بالصينية </div>
+			<div class="divrowr">97.000</div>
 			<br>
 			
 			
