--- a/oriental.html
+++ b/oriental.html
@@ -126,10 +126,10 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">لحمة بعجين قرص صغير</div>
-			<div class="divrowr">17.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص كبير</div>
-			<div class="divrowr">36.000</div>
+			<div class="divrowr"></div>
 			<br>
 		</div>
 
@@ -144,19 +144,19 @@
 			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">دزينة معجنات سلق</div>
-			<div class="divrowr">192.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">دزينة معجنات جبنة</div>
-			<div class="divrowr">220.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">دزينة معجنات محمرة</div>
-			<div class="divrowr">154.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص كبير</div>
-			<div class="divrowr">36.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">لحمة بعجين قرص صغير</div>
-			<div class="divrowr">17.500</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -168,7 +168,7 @@
 		<div class="accordion__content_daily" id="Monday">
 	
 			<div class="divrowl">كبة بالصينية</div>
-			<div class="divrowr">119.000</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -177,7 +177,7 @@
 		<div class="accordion__content_daily" id="Tuesday">
 	
 			<div class="divrowl">مصارين </div>
-			<div class="divrowr">162.000</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -187,7 +187,7 @@
 		<div class="accordion__content_daily" id="Wednesday">
 	
 			<div class="divrowl">ارز بالحمص مع الدجاج</div>
-			<div class="divrowr">125.000</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -196,7 +196,7 @@
 		<div class="accordion__content_daily" id="Thursday">
 	
 			<div class="divrowl"> دجاج صيني </div>
-			<div class="divrowr">131.000</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -206,7 +206,7 @@
 		<div class="accordion__content_daily" id="Friday">
 	
 			<div class="divrowl">بفتاك مع بطاطا</div>
-			<div class="divrowr">168.000</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -216,7 +216,7 @@
 		<div class="accordion__content_daily" id="Saturday">
 	
 			<div class="divrowl">بيف ستروغونوف مع الارز الابيض</div>
-			<div class="divrowr">175.000</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -228,55 +228,55 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">سمكة حرة</div>
-			<div class="divrowr">183.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">ورق عنب باللحمة</div>
-			<div class="divrowr">245.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">مغربية بالدجاج</div>
-			<div class="divrowr">115.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">عجة باللحمة</div>
-			<div class="divrowr">132.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">سبانخ و رز</div>
-			<div class="divrowr">113.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">كوسا بدبس الرمان</div>
-			<div class="divrowr">90.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">سلق بلوبية</div>
-			<div class="divrowr">86.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">بطاطا علحمة مفرومة مع الفطر والمكسرات</div>
-			<div class="divrowr">151.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">مغربية</div>
 			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">ملفوف بدبس الرمان</div>
-			<div class="divrowr">108.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">ورق عنب بالزيت</div>
-			<div class="divrowr">108.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">دجاج بالصينية</div>
-			<div class="divrowr">156.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">هندبة بالثوم والحامض</div>
-			<div class="divrowr">96.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">هندبة بالبصل</div>
-			<div class="divrowr">83.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">قرص كبة</div>
-			<div class="divrowr">25.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">مقالي مشكل</div>
 			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">سلق ملفوف</div>
-			<div class="divrowr">113.000</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">عجة</div>
 			<div class="divrowr"></div>
