--- a/oxidental.html
+++ b/oxidental.html
@@ -229,7 +229,7 @@
 			<div class="divrowl">Shrimp Provencial </div>
 			<div class="divrowr">4.7$</div>
 			<br>
-			<div class="divrowl"Fish & Fries Pane</div>
+			<div class="divrowl">Fish & Fries Pane</div>
 			<div class="divrowr">2.89$</div>
 				
 		</div>
