--- a/oxidental.html
+++ b/oxidental.html
@@ -231,6 +231,9 @@
 			<br>
 			<div class="divrowl">Fish & Fries Pane</div>
 			<div class="divrowr">2.89$</div>
+			<br>
+			<div class="divrowl">Fish & Fries Pane </div>
+			<div class="divrowr">2.89$</div>
 				
 		</div>
 <div class="accordion__button">Wings</div>
