--- a/oriental.html
+++ b/oriental.html
@@ -195,7 +195,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl"> دجاج صيني </div>
+			<div class="divrowl">  </div>
 			<div class="divrowr"></div>
 			<br>
 			
@@ -205,7 +205,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">بفتاك مع بطاطا</div>
+			<div class="divrowl">كفتة بالطحينية بالفرن</div>
 			<div class="divrowr"></div>
 			<br>
 			
@@ -215,7 +215,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">بيف ستروغونوف مع الارز الابيض</div>
+			<div class="divrowl">مصارين</div>
 			<div class="divrowr"></div>
 			<br>
 			
