--- a/oriental.html
+++ b/oriental.html
@@ -176,7 +176,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">مصارين </div>
+			<div class="divrowl">شاكرية باللبن</div>
 			<div class="divrowr"></div>
 			<br>
 			
@@ -186,7 +186,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">ارز بالحمص مع الدجاج</div>
+			<div class="divrowl">صيادية سمك</div>
 			<div class="divrowr"></div>
 			<br>
 			
@@ -195,7 +195,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">  </div>
+			<div class="divrowl"> كبة لبنية  </div>
 			<div class="divrowr"></div>
 			<br>
 			
@@ -205,7 +205,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">كفتة بالطحينية بالفرن</div>
+			<div class="divrowl">دجاج بالصينية مع بطاطا</div>
 			<div class="divrowr"></div>
 			<br>
 			
@@ -215,7 +215,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">مصارين</div>
+			<div class="divrowl">بازيلا وارز</div>
 			<div class="divrowr"></div>
 			<br>
 			
