--- a/oriental.html
+++ b/oriental.html
@@ -126,11 +126,9 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">لحمة بعجين قرص صغير</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">0.4$</div>
 			<br>
-			<div class="divrowl">لحمة بعجين قرص كبير</div>
-			<div class="divrowr"></div>
-			<br>
+			
 		</div>
 
 <div class="accordion__button">معجنات</div>
@@ -228,58 +226,49 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">سمكة حرة</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">6.04$</div>
 			<br>
 			<div class="divrowl">ورق عنب باللحمة</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">مغربية بالدجاج</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">7.2$</div>
 			<br>
 			<div class="divrowl">عجة باللحمة</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">2.75$</div>
 			<br>
 			<div class="divrowl">سبانخ و رز</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">كوسا بدبس الرمان</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">2.8$</div>
 			<br>
 			<div class="divrowl">سلق بلوبية</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">1.2$</div>
 			<br>
 			<div class="divrowl">بطاطا علحمة مفرومة مع الفطر والمكسرات</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">مغربية</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">4.14$</div>
 			<br>
 			<div class="divrowl">ملفوف بدبس الرمان</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">2.6$</div>
 			<br>
 			<div class="divrowl">ورق عنب بالزيت</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">دجاج بالصينية</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">1.92$</div>
 			<br>
 			<div class="divrowl">هندبة بالثوم والحامض</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">0.98$</div>
 			<br>
 			<div class="divrowl">هندبة بالبصل</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">0.98$</div>
 			<br>
 			<div class="divrowl">قرص كبة</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">0.6$</div>
 			<br>
 			<div class="divrowl">مقالي مشكل</div>
 			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">سلق ملفوف</div>
-			<div class="divrowr"></div>
+			<div class="divrowr">2.4$</div>
 			<br>
 			<div class="divrowl">عجة</div>
 			<div class="divrowr"></div>
+			<br>
+			<div class="divrowl">بطاطا بكزبرة</div>
+			<div class="divrowr">1.57$</div>
 		</div>
 
 
