--- a/oriental.html
+++ b/oriental.html
@@ -276,6 +276,15 @@
 	
 		<div class="accordion__content">
 			
+			<div class="divrowl">تبولة</div>
+			<div class="divrowr">1.28$</div>
+			<br>
+			<div class="divrowl">فتوش</div>
+			<div class="divrowr">1.43$</div>
+			<br>
+			<div class="divrowl">سلطة عربية</div>
+			<div class="divrowr">1.2$</div>
+			<br>
 		</div>
 
 
