--- a/oxidental.html
+++ b/oxidental.html
@@ -267,6 +267,9 @@
 	
 		<div class="accordion__content">
 	
+			<div class="divrowl">Nachos</div>
+			<div class="divrowr">1.4$</div>
+			<br>
 			<div class="divrowl">Coleslaw</div>
 			<div class="divrowr">0.8$</div>
 			<br>
