--- a/oriental.html
+++ b/oriental.html
@@ -174,7 +174,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">شاكرية باللبن</div>
+			<div class="divrowl">بطاطا سوفليه باللحمة المفرومة والكعك والجبنة</div>
 			<div class="divrowr"></div>
 			<br>
 			
@@ -184,8 +184,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">صيادية سمك</div>
-			<div class="divrowr"></div>
+			<div class="divrowl">مقلوبة باذنجان مع اللحمة والدجاج</div>
+			<div class="divrowr">2.96$</div>
 			<br>
 			
 			
@@ -193,7 +193,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl"> كبة لبنية  </div>
+			<div class="divrowl">كبة بالصينية</div>
 			<div class="divrowr"></div>
 			<br>
 			
@@ -203,8 +203,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">دجاج بالصينية مع بطاطا</div>
-			<div class="divrowr"></div>
+			<div class="divrowl">مصارين </div>
+			<div class="divrowr">3.01$</div>
 			<br>
 			
 			
@@ -213,7 +213,7 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">بازيلا وارز</div>
+			<div class="divrowl">برغل  بالحمص مع الدجاج</div>
 			<div class="divrowr"></div>
 			<br>
 			
