--- a/oxidental.html
+++ b/oxidental.html
@@ -76,34 +76,34 @@
 	
 		<div class="accordion__content">
 	
-			<div class="divrowl">Meat Burger 150g</div>
-			<div class="divrowr">3.84$</div>
+			<div class="divrowl">Meat Burger (150g Meat)</div>
+			<div class="divrowr">4.25$</div>
 			<br>
-			<div class="divrowl">Double Meat Burger</div>
-			<div class="divrowr">6.82$</div>
+			<div class="divrowl">Double Meat Burger (200g Meat)</div>
+			<div class="divrowr">5.06$</div>
 			<br>
-			<div class="divrowl">Swiss Mushroom Burger</div>
-			<div class="divrowr">7.44$</div>
+			<div class="divrowl">Swiss Mushroom Burger (150g Meat)</div>
+			<div class="divrowr">5.39$</div>
 			<br>
-			<div class="divrowl">Double Swiss Mushroom Burger</div>
-			<div class="divrowr">7.94$</div>
+			<div class="divrowl">Double Swiss Mushroom Burger (200g Meat)</div>
+			<div class="divrowr">6.10$</div>
 			<br>
-			<div class="divrowl">Chicken Burger</div>
-			<div class="divrowr">3.78$</div>
+			<div class="divrowl">Chicken Burger (150g Chicken)</div>
+			<div class="divrowr">3.00$</div>
 			<br>
-			<div class="divrowl">Double Chicken Burger</div>
-			<div class="divrowr">5.6$</div>
+			<div class="divrowl">Double Chicken Burger (200g Chicken)</div>
+			<div class="divrowr">3.59$</div>
 			<br>
-			<div class="divrowl">Swiss Mushroom Chicken Burger</div>
-			<div class="divrowr">4.22$</div>
+			<div class="divrowl">Swiss Mushroom Chicken Burger (150g Chicken)</div>
+			<div class="divrowr">4.07$</div>
 			<br>
-			<div class="divrowl">Double Swiss Mushroom Chicken Burger</div>
-			<div class="divrowr">7.00$</div>
+			<div class="divrowl">Double Swiss Mushroom Chicken Burger (200g Chicken)</div>
+			<div class="divrowr">4.59$</div>
 			<br>
-			<div class="divrowl">Chicken Breast Burger</div>
+			<div class="divrowl">Chicken Breast Burger (100g Chicken)</div>
 			<div class="divrowr">3.64$</div>
 			<br>
-			<div class="divrowl">Fish Burger</div>
+			<div class="divrowl">Fish Burger (200g Fish)</div>
 			<div class="divrowr">1.96$</div>
 		</div>
 		
@@ -111,41 +111,41 @@
 	
 		<div class="accordion__content">
 	
-			<div class="divrowl">Crispy</div>
+			<div class="divrowl">Crispy (5 PCS)</div>
 			<div class="divrowr">3.35$</div>
 			<br>
-			<div class="divrowl">Nuggets</div>
-			<div class="divrowr">1.98$</div>
+			<div class="divrowl">Nuggets (6 PCS)</div>
+			<div class="divrowr">2.37$</div>
 			<br>
-			<div class="divrowl">Chicken Popcorn</div>
-			<div class="divrowr">2.43$</div>
+			<div class="divrowl">Chicken Popcorn (150g Chicken)</div>
+			<div class="divrowr">2.12$</div>
 			<br>
-			<div class="divrowl">Chicken Escalope</div>
+			<div class="divrowl">Chicken Escalope (200g Chicken)</div>
 			<div class="divrowr">3.44$</div>
 			<br>
-			<div class="divrowl">Cordon Bleu</div>
+			<div class="divrowl">Cordon Bleu (150g Chicken)</div>
 			<div class="divrowr">5.02$</div>
 			<br>
-			<div class="divrowl">Chicken Pesto</div>
+			<div class="divrowl">Chicken Pesto (200g Chicken)</div>
 			<div class="divrowr">3.96$</div>
 			<br>
-			<div class="divrowl">Grilled Steak</div>
-			<div class="divrowr">7.78$</div>
+			<div class="divrowl">Grilled Steak (200g Meat)</div>
+			<div class="divrowr">6.04$</div>
 			<br>
-			<div class="divrowl">Mushroom Meat Steak</div>
+			<div class="divrowl">Mushroom Meat Steak (200g Meat)</div>
 			<div class="divrowr">6.44$</div>
 			<br>
-			<div class="divrowl">Pesto Meat Steak</div>
-			<div class="divrowr">7.04$</div>
+			<div class="divrowl">Pesto Meat Steak (200g Meat)</div>
+			<div class="divrowr">6.59$</div>
 			<br>
-			<div class="divrowl">Mushroom Chicken Breast</div>
-			<div class="divrowr">5.78$</div>
+			<div class="divrowl">Mushroom Chicken Breast (200g Chicken)</div>
+			<div class="divrowr">4.39$</div>
 			<br>
-			<div class="divrowl">Chicken Breast</div>
+			<div class="divrowl">Chicken Breast (200g Chicken)</div>
 			<div class="divrowr">3.64$</div>
 			<br>
-			<div class="divrowl">Rosemary Chicken Breast</div>
-			<div class="divrowr">4.64$</div>
+			<div class="divrowl">Rosemary Chicken Breast (200g Chicken)</div>
+			<div class="divrowr">4.49$</div>
 			<br>
 			<div class="divrowl">Sauted Vegetables</div>
 			<div class="divrowr">1.00$</div>
@@ -164,7 +164,7 @@
 			<div class="divrowr">3.24$</div>
 			<br>
 			<div class="divrowl">Philadelphia</div>
-			<div class="divrowr">4.00$</div>
+			<div class="divrowr">3.25$</div>
 			<br>
 			<div class="divrowl">Steak Sub</div>
 			<div class="divrowr">4.56$</div>
@@ -176,13 +176,13 @@
 			<div class="divrowr">2.4$</div>
 			<br>
 			<div class="divrowl">Tacos Meat</div>
-			<div class="divrowr">5.74$</div>
+			<div class="divrowr">4.74$</div>
 			<br>
 			<div class="divrowl">Tacos Chicken</div>
-			<div class="divrowr">4.36$</div>
+			<div class="divrowr">3.36$</div>
 			<br>
 			<div class="divrowl">Meat Quesadilla</div>
-			<div class="divrowr">5.62$</div>
+			<div class="divrowr">4.86$</div>
 			<br>
 			<div class="divrowl">Chicken Quesadilla</div>
 			<div class="divrowr">3.78$</div>
@@ -217,16 +217,16 @@
 	
 		<div class="accordion__content">
 	
-			<div class="divrowl">Calamar Pane</div>
+			<div class="divrowl">Calamar Pane (15 PCS)</div>
 			<div class="divrowr">6.26$</div>
 			<br>
-			<div class="divrowl">Calamar Provencial</div>
+			<div class="divrowl">Calamar Provencial (15 PCS)</div>
 			<div class="divrowr">6.04$</div>
 			<br>
-			<div class="divrowl">Shrimp Tiger Pane</div>
+			<div class="divrowl">Shrimp Tiger Pane (15 PCS)</div>
 			<div class="divrowr">7.4$</div>
 			<br>
-			<div class="divrowl">Shrimp Provencial </div>
+			<div class="divrowl">Shrimp Provencial (15 PCS)</div>
 			<div class="divrowr">7.4$</div>
 			<br>
 			<div class="divrowl">Fish & Fries Oane</div>
@@ -238,10 +238,10 @@
 	
 		<div class="accordion__content">
 	
-			<div class="divrowl">Buffalo Wings</div>
+			<div class="divrowl">Buffalo Wings (8 PCS)</div>
 			<div class="divrowr">3.26$</div>
 			<br>
-			<div class="divrowl">Barbecue Wings</div>
+			<div class="divrowl">Barbecue Wings (8 PCS)</div>
 			<div class="divrowr">3.26$</div>
 			
 			
@@ -270,7 +270,7 @@
 			<div class="divrowl">Nachos</div>
 			<div class="divrowr">1.4$</div>
 			<br>
-			<div class="divrowl">Coleslaw</div>
+			<div class="divrowl">Coleslaw (150g)</div>
 			<div class="divrowr">0.8$</div>
 			<br>
 			<div class="divrowl">Fries 300g</div>
@@ -279,7 +279,7 @@
 			<div class="divrowl">Potato Wedges 300g</div>
 			<div class="divrowr">1.52$</div>
 			<br>
-			<div class="divrowl">Jalappenos Cheddar Fries</div>
+			<div class="divrowl">Jalappenos Cheddar Fries (200g Fries)</div>
 			<div class="divrowr">1.73$</div>
 			<br>
 			<div class="divrowl">Potato Puree 300g</div>
@@ -288,7 +288,7 @@
 			<div class="divrowl">Curly Fries 200g</div>
 			<div class="divrowr">1.14$</div>
 			<br>
-			<div class="divrowl">Garlic Bread</div>
+			<div class="divrowl">Garlic Bread (4 PCS)</div>
 			<div class="divrowr">1.62$</div>
 		</div>	
 
