--- a/oxidental.html
+++ b/oxidental.html
@@ -89,7 +89,7 @@
 			<div class="divrowr">6.10$</div>
 			<br>
 			<div class="divrowl">Chicken Burger (150g Chicken)</div>
-			<div class="divrowr">3.00$</div>
+			<div class="divrowr">3.01$</div>
 			<br>
 			<div class="divrowl">Double Chicken Burger (200g Chicken)</div>
 			<div class="divrowr">3.59$</div>
@@ -132,14 +132,14 @@
 			<div class="divrowl">Grilled Steak (200g Meat)</div>
 			<div class="divrowr">6.04$</div>
 			<br>
-			<div class="divrowl">Mushroom Meat Steak (200g Meat)</div>
+			<div class="divrowl">Mushroom Steak (200g Meat)</div>
 			<div class="divrowr">6.44$</div>
 			<br>
-			<div class="divrowl">Pesto Meat Steak (200g Meat)</div>
+			<div class="divrowl">Pesto Steak (200g Meat)</div>
 			<div class="divrowr">6.59$</div>
 			<br>
 			<div class="divrowl">Mushroom Chicken Breast (200g Chicken)</div>
-			<div class="divrowr">4.39$</div>
+			<div class="divrowr">4.49$</div>
 			<br>
 			<div class="divrowl">Chicken Breast (200g Chicken)</div>
 			<div class="divrowr">3.64$</div>
@@ -182,7 +182,7 @@
 			<div class="divrowr">3.36$</div>
 			<br>
 			<div class="divrowl">Meat Quesadilla</div>
-			<div class="divrowr">4.86$</div>
+			<div class="divrowr">4.68$</div>
 			<br>
 			<div class="divrowl">Chicken Quesadilla</div>
 			<div class="divrowr">3.78$</div>
@@ -203,7 +203,7 @@
 			<div class="divrowl">Pesto Pasta chicken</div>
 			<div class="divrowr">3.38$</div>
 			<br>
-			<div class="divrowl">Spaghetti Bolognese </div>
+			<div class="divrowl">Bolognese </div>
 			<div class="divrowr">3.5$</div>
 			<br>
 			<div class="divrowl">Lasagne Bolognese</div>
@@ -273,11 +273,11 @@
 			<div class="divrowl">Coleslaw (150g)</div>
 			<div class="divrowr">0.8$</div>
 			<br>
-			<div class="divrowl">Fries 300g</div>
+			<div class="divrowl">Fries 150g</div>
 			<div class="divrowr">1.02$</div>
 			<br>
-			<div class="divrowl">Potato Wedges 300g</div>
-			<div class="divrowr">1.52$</div>
+			<div class="divrowl">Potato Wedges 150g</div>
+			<div class="divrowr">1.32$</div>
 			<br>
 			<div class="divrowl">Jalappenos Cheddar Fries (200g Fries)</div>
 			<div class="divrowr">1.73$</div>
@@ -285,8 +285,8 @@
 			<div class="divrowl">Potato Puree 300g</div>
 			<div class="divrowr">1.12$</div>
 			<br>
-			<div class="divrowl">Curly Fries 200g</div>
-			<div class="divrowr">1.14$</div>
+			<div class="divrowl">Curly Fries 150g</div>
+			<div class="divrowr">1.52$</div>
 			<br>
 			<div class="divrowl">Garlic Bread (4 PCS)</div>
 			<div class="divrowr">1.62$</div>
