--- a/oriental.html
+++ b/oriental.html
@@ -131,35 +131,6 @@
 			
 		</div>
 
-<div class="accordion__button">معجنات</div>
-	
-		<div class="accordion__content">
-	
-			<div class="divrowl">دزينة معجنات زعتر</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">دزينة معجنات قريشة</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">دزينة معجنات سلق</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">دزينة معجنات جبنة</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">دزينة معجنات محمرة</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">لحمة بعجين قرص كبير</div>
-			<div class="divrowr"></div>
-			<br>
-			<div class="divrowl">لحمة بعجين قرص صغير</div>
-			<div class="divrowr"></div>
-			<br>
-			
-			
-		</div>
-
 
 <div class="accordion__button_daily">الصحن اليومي</div>
 	
@@ -174,8 +145,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">بطاطا سوفليه باللحمة المفرومة والكعك والجبنة</div>
-			<div class="divrowr"></div>
+			<div class="divrowl">بفتاك مع بطاطا</div>
+			<div class="divrowr">5.6$</div>
 			<br>
 			
 			
@@ -184,8 +155,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">مقلوبة باذنجان مع اللحمة والدجاج</div>
-			<div class="divrowr">2.96$</div>
+			<div class="divrowl">بيف ستروغونوف مع الارز الابيض</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -193,8 +164,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">كبة بالصينية</div>
-			<div class="divrowr"></div>
+			<div class="divrowl">سودة بزيت وثوم وحامض مع بطاطا</div>
+			<div class="divrowr">3.00$</div>
 			<br>
 			
 			
@@ -203,8 +174,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">مصارين </div>
-			<div class="divrowr">3.01$</div>
+			<div class="divrowl">قمحية بالدجاج</div>
+			<div class="divrowr">2.86$</div>
 			<br>
 			
 			
@@ -213,13 +184,30 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">برغل  بالحمص مع الدجاج</div>
+			<div class="divrowl">جوانح مطفاية بروفنسيال</div>
 			<div class="divrowr"></div>
 			<br>
 			
 			
 		</div>
 		
+<div class="accordion__button">سندويش عربي</div>
+	
+		<div class="accordion__content">
+			
+			<div class="divrowl">طاووق</div>
+			<div class="divrowr">1.98$</div>
+			<br>
+			<div class="divrowl">مقانق</div>
+			<div class="divrowr">2.12$</div>
+			<br>
+			<div class="divrowl">سجق</div>
+			<div class="divrowr">2.12$</div>
+			<br>
+			<div class="divrowl">بطاطا</div>
+			<div class="divrowr">0.85$</div>
+			<br>
+		</div>
 
 <div class="accordion__button">ع طلبك</div>
 	
@@ -258,9 +246,6 @@
 			<div class="divrowl">قرص كبة</div>
 			<div class="divrowr">0.6$</div>
 			<br>
-			<div class="divrowl">مقالي مشكل</div>
-			<div class="divrowr"></div>
-			<br>
 			<div class="divrowl">سلق ملفوف</div>
 			<div class="divrowr">2.4$</div>
 			<br>
@@ -283,7 +268,7 @@
 			<div class="divrowr">1.43$</div>
 			<br>
 			<div class="divrowl">سلطة عربية</div>
-			<div class="divrowr">1.2$</div>
+			<div class="divrowr">1.1$</div>
 			<br>
 		</div>
 
