--- a/oriental.html
+++ b/oriental.html
@@ -136,8 +136,8 @@
 	
 		<div class="accordion__content_daily" id="Monday">
 	
-			<div class="divrowl">كبة بالصينية</div>
-			<div class="divrowr"></div>
+			<div class="divrowl">كفتة بالصينية بالفرن مع ارز</div>
+			<div class="divrowr">4.2$</div>
 			<br>
 			
 			
@@ -145,8 +145,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Tuesday">
 	
-			<div class="divrowl">بفتاك مع بطاطا</div>
-			<div class="divrowr">5.6$</div>
+			<div class="divrowl">مصارين</div>
+			<div class="divrowr">3.01$</div>
 			<br>
 			
 			
@@ -155,8 +155,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Wednesday">
 	
-			<div class="divrowl">بيف ستروغونوف مع الارز الابيض</div>
-			<div class="divrowr">4.11$</div>
+			<div class="divrowl">فاصولياء بالارز</div>
+			<div class="divrowr">3.02$</div>
 			<br>
 			
 			
@@ -164,8 +164,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Thursday">
 	
-			<div class="divrowl">سودة بزيت وثوم وحامض مع بطاطا</div>
-			<div class="divrowr">3.00$</div>
+			<div class="divrowl">مقلوبة باذنجان</div>
+			<div class="divrowr">2.96$</div>
 			<br>
 			
 			
@@ -174,8 +174,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">قمحية بالدجاج</div>
-			<div class="divrowr">2.86$</div>
+			<div class="divrowl">بفتاك مع بطاطا</div>
+			<div class="divrowr">5.6$</div>
 			<br>
 			
 			
@@ -184,8 +184,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">جوانح مطفاية بروفنسيال</div>
-			<div class="divrowr">2.96$</div>
+			<div class="divrowl">بطاطا سوفليه باللحمة المفرومة والكعك والموزوريلا</div>
+			<div class="divrowr">2.68$</div>
 			<br>
 			
 			
