--- a/oriental.html
+++ b/oriental.html
@@ -174,8 +174,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Friday">
 	
-			<div class="divrowl">مصارين</div>
-			<div class="divrowr">4$</div>
+			<div class="divrowl">ملوخية وارز</div>
+			<div class="divrowr">3.2$</div>
 			<br>
 			
 			
@@ -184,8 +184,8 @@
 		</div>
 		<div class="accordion__content_daily" id="Saturday">
 	
-			<div class="divrowl">جوانح مطفاية بروفنسيال</div>
-			<div class="divrowr">3.2$</div>
+			<div class="divrowl">كفتة بالدجاج</div>
+			<div class="divrowr">4$</div>
 			<br>
 			
 			</div>
