--- a/oriental.html
+++ b/oriental.html
@@ -126,7 +126,7 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">لحمة بعجين قرص صغير</div>
-			<div class="divrowr">0.65$</div>
+			<div class="divrowr"></div>
 			<br>
 			
 		</div>
@@ -137,7 +137,7 @@
 		<div class="accordion__content_daily" id="Monday">
 	
 			<div class="divrowl">بازيلا وارز باللحمة</div>
-			<div class="divrowr">3.2$</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -146,7 +146,7 @@
 		<div class="accordion__content_daily" id="Tuesday">
 	
 			<div class="divrowl">منسف دجاج مع اللبن</div>
-			<div class="divrowr">3.20$</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -156,7 +156,7 @@
 		<div class="accordion__content_daily" id="Wednesday">
 	
 			<div class="divrowl">كوسى باللبن</div>
-			<div class="divrowr">3.5$</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -165,7 +165,7 @@
 		<div class="accordion__content_daily" id="Thursday">
 	
 			<div class="divrowl">شاكرية بالدجاج باللبن</div>
-			<div class="divrowr">3$</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -175,7 +175,7 @@
 		<div class="accordion__content_daily" id="Friday">
 	
 			<div class="divrowl">دجاج بالصينية</div>
-			<div class="divrowr">3.75$</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -185,14 +185,14 @@
 		<div class="accordion__content_daily" id="Saturday">
 	
 			<div class="divrowl">كبة لبنية </div>
-			<div class="divrowr">3$</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			</div>
 		<div class="accordion__content_daily" id="Sunday">
 	
 			<div class="divrowl">سمك اجاج مع سرفيس مشوي او مقلي</div>
-			<div class="divrowr">13.15$</div>
+			<div class="divrowr"></div>
 			<br>
 			
 			
@@ -203,19 +203,19 @@
 		<div class="accordion__content">
 			
 			<div class="divrowl">طاووق</div>
-			<div class="divrowr">3.2$</div>
+			<div class="divrowr"></div>
 			<br>
                         <div class="divrowl">كريسبي</div>
-			<div class="divrowr">3.2$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">مقانق</div>
-			<div class="divrowr">3.5$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">سجق</div>
-			<div class="divrowr">3.5$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">بطاطا</div>
-			<div class="divrowr">1.2$</div>
+			<div class="divrowr"></div>
 			<br>
 		</div>
 
@@ -224,46 +224,46 @@
 		<div class="accordion__content">
 	
 			<div class="divrowl">سمكة حرة</div>
-			<div class="divrowr">6.04$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">ورق عنب باللحمة</div>
-			<div class="divrowr">7.2$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">عجة باللحمة</div>
-			<div class="divrowr">2.74$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">سبانخ و رز</div>
-			<div class="divrowr">2.8$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">سلق بلوبية</div>
-			<div class="divrowr">1.2$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">بطاطا علحمة مفرومة مع الفطر والمكسرات</div>
-			<div class="divrowr">3.9$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">ملفوف بدبس الرمان</div>
-			<div class="divrowr">2.6$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">ورق عنب بالزيت</div>
-			<div class="divrowr">2.25$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">هندبة بالثوم والحامض</div>
-			<div class="divrowr">1.35$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">هندبة بالبصل</div>
-			<div class="divrowr">1.35$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">قرص كبة</div>
-			<div class="divrowr">0.7$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">سلق ملفوف</div>
-			<div class="divrowr">2.4$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">عجة</div>
-			<div class="divrowr">1.65$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">بطاطا بكزبرة</div>
-			<div class="divrowr">1.56$</div>
+			<div class="divrowr"></div>
 		</div>
 
 
@@ -272,13 +272,13 @@
 		<div class="accordion__content">
 			
 			<div class="divrowl">تبولة</div>
-			<div class="divrowr">1.65$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">فتوش</div>
-			<div class="divrowr">1.65$</div>
+			<div class="divrowr"></div>
 			<br>
 			<div class="divrowl">سلطة عربية</div>
-			<div class="divrowr">1.1$</div>
+			<div class="divrowr"></div>
 			<br>
 		</div>
 
